--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,17 +13,17 @@ jobs:
   build:
     name: Build and test
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 30  # **Added timeout to avoid long-running jobs getting canceled**
+    timeout-minutes: 30
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
-        rust: [stable]  # You may specify a version like '1.81.0' here if desired
+        rust: [stable]
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Log before installing Rust  # **Added logging step for better visibility**
+    - name: Log before installing Rust
       run: echo "Starting to install Rust"
 
     - name: Install Rust
@@ -32,16 +32,20 @@ jobs:
         profile: minimal
         toolchain: ${{ matrix.rust }}
         override: true
-        components: rustfmt, clippy  # Consider removing optional components for testing
+        components: rustfmt, clippy
 
     - name: Build
+      working-directory: src-tauri  # **Set the working directory to src-tauri**
       run: cargo build --verbose
 
     - name: Run tests
+      working-directory: src-tauri  # **Set the working directory to src-tauri**
       run: cargo test --verbose
 
     - name: Check formatting
+      working-directory: src-tauri  # **Set the working directory to src-tauri**
       run: cargo fmt -- --check
 
     - name: Run clippy
+      working-directory: src-tauri  # **Set the working directory to src-tauri**
       run: cargo clippy -- -D warnings
