--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     name: Build and test
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 60  # Increase timeout
+    timeout-minutes: 600  # Increase timeout
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
@@ -24,7 +24,7 @@ jobs:
 
     - name: Install system dependencies on Ubuntu
       if: matrix.os == 'ubuntu-latest'
-      run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev
+      run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev libjavascriptcoregtk-4.0-dev
 
     - name: Install pkgconfiglite on Windows
       if: matrix.os == 'windows-latest'
@@ -32,7 +32,7 @@ jobs:
 
     - name: Install Homebrew dependencies on macOS
       if: matrix.os == 'macOS-latest'
-      run: brew install pkg-config  # Add other dependencies as needed
+      run: brew install pkg-config gtk+3  # Add other dependencies as needed
 
     - name: Install Rust
       uses: actions-rs/toolchain@v1
