--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     name: Build and test
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 600  # Increase timeout
+    timeout-minutes: 60
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
@@ -24,7 +24,15 @@ jobs:
 
     - name: Install system dependencies on Ubuntu
       if: matrix.os == 'ubuntu-latest'
-      run: sudo apt-get update && sudo apt-get install -y libgtk-3-dev libjavascriptcoregtk-4.0-dev
+      run: |
+        sudo apt-get update && \
+        sudo apt-get install -y \
+          libgtk-3-dev \
+          libjavascriptcoregtk-4.0-dev \
+          libsoup3-dev \
+          libglib2.0-dev \
+          libgdk-pixbuf2.0-dev \
+          libcairo2-dev
 
     - name: Install pkgconfiglite on Windows
       if: matrix.os == 'windows-latest'
