--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
         sudo apt-get update && \
         sudo apt-get install -y \
           libgtk-3-dev \
-          libjavascriptcoregtk-4.0-dev \
-          libsoup2.4-dev \
+          libwebkit2gtk-4.1-dev \
+          libsoup-3.0-dev \
           libglib2.0-dev \
           libgdk-pixbuf2.0-dev \
           libcairo2-dev
